# algotrader

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  docker-compose.yml  lint-python.sh  package-lock.json  package.json
api-db/: .env  Dockerfile  main.py
api-db/app/: crud.py  database.py  schemas.py
backend/: Dockerfile  entrypoint-backend.sh  express.js  package-lock.json  package.json  sample.env  server.js
backend/app/controllers/: data.server.controller.js
backend/app/models/: data.server.model.js
backend/app/routes/: data.server.route.js
backend/app/utils/: websocket.js  websocketserver.js
backtester/: .bumpversion.cfg  .pylintrc  Dockerfile  __init__.py  entrypoint-backtester.sh  main.ipynb  main.py  performance_test.ipynb  pyproject.toml  requirements.txt  sample.env  websocket_client.py
backtester/data/: base.py  db.py
backtester/data/feeds/: csv.py  ctrader.py  tradingview.py
backtester/indicators/: __init__.py  base.py  bbands.py  macd.py  rsi.py  sma.py
backtester/portfolio/: base.py
backtester/signals/: signal.py
backtester/src/data/: base.py
backtester/src/data/feeds/: databaseAccessor.py
backtester/src/handlers/: __init__.py  base.py  dispatcher.py  indicator_handler.py
backtester/src/indicators/: currencyStrength.py  rsi.py  sma.py
backtester/test/: test_signals.py
backtester/utils/: ticket.py
broker-service/: README.md  pyproject.toml  sample.env
broker-service/app/: __init__.py  main.py  settings.py
broker-service/app/api/: dependencies.py  schemas.py
broker-service/app/api/routers/: __init__.py  accounts.py  deals.py  market_data.py  meta.py  orders.py  positions.py
broker-service/app/application/: interfaces.py
broker-service/app/application/services/: __init__.py  account_service.py  market_data_service.py  order_service.py  trade_service.py
broker-service/app/domain/: value_objects.py
broker-service/app/domain/models/: __init__.py  account.py  deal.py  order.py  position.py  symbol.py  tick.py  trade.py  trendbar.py
broker-service/app/infrastructure/: config.py  ctrader_client.py  ctrader_mappers.py  ctrader_symbol_cache.py  logging.py  redis_streams_publisher.py  stream_registry.py  trendbar_stream_registry.py
database-accessor-api/: .bumpversion.cfg  Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt  sample.env
database-accessor-api/app/: crud.py  database.py  models.py  schemas.py
frontend/: Dockerfile  entrypoint-frontend.sh  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: Chart.vue  LightweightChart.vue  Modal.vue
frontend/src/icons/: index.js
frontend/src/router/: index.js
frontend/src/stores/: candlesticksStore.js  currentMarketStore.js  currentTimeframeStore.js  indicatorsStore.js  marketsStore.js  modalStore.js  timeframeStore.js
frontend/src/utils/: Ticket.js  websocketService.js
frontend/src/views/: ChartView.vue
indicator-api/: .bumpversion.cfg  .pylintrc  Dockerfile  __init__.py  logger.py  main.py  pyproject.toml  requirements.txt  sample.env
indicator-api/app/: __init__.py  candles.py  markets.py  schemas.py  utils.py
indicator-api/app/indicators/: base.py  bbands.py  macd.py  rsi.py  (+2 more)
timescaledb-init/: 01-init.sql  02-finance_data.sql
(+36 files in other folders)
